"Fixed text alignment"

--- a/src/style/PagesStyle/About.css
+++ b/src/style/PagesStyle/About.css
@@ -47,6 +47,7 @@
     }
     #about-banner-text {
        padding-left: 5vh;
+       text-align: center;
     }
     #about-text-content {
         margin-left: -3vh;
